fix: remove `overflow: scroll` property for code blocks

--- a/assets/style.css
+++ b/assets/style.css
@@ -155,7 +155,6 @@ header {
 
 article pre {
     padding: var(--pad);
-    overflow: scroll;
     background: var(--bgcode);
     border-radius: var(--border);
     text-wrap: wrap;
